--- a/ember.css
+++ b/ember.css
@@ -104,9 +104,7 @@
             font-size:18px;
         }
         
-     
-        
-        .success, .working, .error, .locked, label {
+        .success, .working, .error, .locked, .malformed, .badlogin, label {
             color: white;
         }
         
