--- a/ember.css
+++ b/ember.css
@@ -94,6 +94,12 @@
 
         }
         
+        ._toolbar {
+            position: fixed;
+            right: 0; top: 0;
+            height: 48px;
+        }
+        
         .helper {
             background: #444;
             border: 1px solid black;
