--- a/ember.css
+++ b/ember.css
@@ -100,6 +100,11 @@
             height: 48px;
         }
         
+        .count{
+            float: right;
+            margin-right: 10px;
+        }
+        
         .helper {
             background: #444;
             border: 1px solid black;
